# portal-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  contracts.yml
contracts/portal-hub/v2/: vault-enrollment-create-request.schema.json  vault-enrollment-list-response.schema.json  vault-enrollment-response.schema.json
docs/: api.md  deployment.md
examples/systemd/: portal-hub-web.service
scripts/: check-android-pairing-flow.sh  install-debian.sh
src/: main.rs  web.rs
tests/: contract.rs  ssh_lifecycle.rs
