[package]
name = "portal-proxy"
version = "0.1.0"
edition = "2024"
description = "Persistent SSH session proxy for Portal"
authors = ["John"]
license = "MIT"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
