[package]
name = "portal-proxy"
version = "0.5.0-beta.3"
edition = "2024"
description = "Persistent SSH session proxy for Portal"
authors = ["John"]
license = "MIT"
readme = "README.md"
rust-version = "1.85"
keywords = ["ssh", "tailscale", "terminal", "proxy", "portal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
portable-pty = "0.8"
