[package]
name = "portal-hub"
version = "0.5.0-beta.14"
edition = "2024"
description = "Persistent SSH session hub for Portal"
authors = ["John"]
license = "MIT"
readme = "README.md"
rust-version = "1.85"
keywords = ["ssh", "tailscale", "terminal", "hub", "portal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
portable-pty = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["trace"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
jsonschema = { version = "0.46.3", default-features = false }
